--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -115,7 +115,10 @@
 .eslint-versions-col {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+
+    @media all and (min-width: 1023px) {
+        align-items: flex-end;
+    }
 }
 
 .eslint-versions {
